<resources>
    <string name="app_name">N913410014_w07</string>
    <string name="resultText">Show Text</string>
    <string name="enlarge">enlarge</string>
    <string name="shrink">shrink</string>
    <string name="error">error</string>
    <string name="up">Action Up</string>
    <string name="down">Action Down</string>
    <string name="move">Action Move</string>
    <string name="touch_event_format">%1$s (%2$d,%3$d)</string>
    <string name="inputName">inpuptName</string>
    <string name="men">men</string>
    <string name="women">women</string>
    </resources>